fix: Correct horizontal scrollbar bug

--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -1,7 +1,7 @@
 @use '@assets/global.scss' as g;
 
 .container {
-  width: 100vw;
+  width: 100%;
   display: flex;
   flex-direction: column;
 }
